# VLLM-on-SW

./: README.md  SESSION_LOG.md  pyproject.toml  sw_vllm_emulator_blueprint.md
nanovllm/: __init__.py  config.py
nanovllm/backends/: __init__.py  attention.py
nanovllm/engine/: llm_engine.py  model_runner.py
nanovllm/layers/: attention.py  rotary_embedding.py
nanovllm/models/: qwen3.py
tests/: test_sw_emulator_backend.py
